# eqmap

./: Cargo.toml  README.md  examples.txt  recordTime.sh  runTests.sh  setup.zsh
.github/workflows/: docs.yml  rust.yml
asplos/: main.tex  references.bib
asplos/data/: mult.csv  results.csv
asplos/sections/: 00-intro.tex  01-background.tex  01-related-work.tex  02-related-work.tex  02-rewrites.tex  03-rewrites.tex  03-toolflow.tex  04-results.tex  04-toolflow.tex  05-conclusion.tex  05-results.tex  06-conclusion.tex  xx-results.tex  xx-rewrites.tex  xx-toolflow.tex
iccad/: main.tex  references.bib  sync-to-overleaf.sh
iccad/data/: alu.csv  mult.csv  results.csv
iccad/sections/: 00-intro.tex  01-background.tex  02-related-work.tex  03-rewrites.tex  04-toolflow.tex  05-results.tex  06-conclusion.tex  07-acknowledgements.tex
src/: analysis.rs  asic.rs  check.rs  cost.rs  driver.rs  lib.rs  logic.rs  lut.rs  parse.rs  rewrite.rs  serialize.rs  verilog.rs
tests/: examples.out  examples.txt  hard_examples.txt
tests/asic/: cla.txt  cla.v
tests/cellang/: cla.txt
tests/disassemble/: full_adder.v  mux_l4.v
tests/driver/: add_synth.v  big_decimal.v  gate_test.v  max_depth.v  mk_rpt.v  mux_reg.v  unused_input.v
tests/emitter/: comparator.txt  idempotent.txt  mux_4_1.txt  parity_checker.txt
tests/lutlang/: bus.txt  examples.txt  gate_compare.txt  hard_examples.txt  invariance.txt  invariance_examples.txt  invariance_no_greedy.txt  proofs.txt
tests/reg/: cycles.txt  mux_retime.txt
tests/verilog/: add_synth.v  big_decimal.v  fdre.v  fdre_roundtrip.v  gate_test.v  gnd.v  mux_4_1_k3.v  mux_4_1_synth.v  mux_decimal.v  mux_reg.v  muxf.v  roundtrip.v  top_5xp1_y0_synth.v  top_5xp1_y1_synth.v  (+1 more)
utils/: append.py  cat.py  min-coverage.py  paths.py  recordTime.sh  runTests.sh  setup.sh  setup.zsh  test-runner.py
verilog/: Makefile  README.md  celllang.v  check-cells.sh  equiv.sh  lutlang.v  simlib.v  stdcells.v
(+3 files in other folders)
