[package]
name = "lut-synth"
version = "0.3.1"
edition = "2021"
default-run = "fam"

[dependencies]
bitvec = "1.0.1"
clap = { version = "4.5.20", features = ["derive"] }
egg = "0.9.5"
indicatif = "0.17.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sv-parser = "0.13.3"

[lints.clippy]
manual_range_contains = "allow"

[features]
default = []
# We probably don't want the compiler to apply folding on LUTs.
# It is too expensive
# default = ["egraph_fold"]
egraph_fold = []
exactness = [ "egg/lp" ]
cut_analysis = []
